fixed height for overflowing edges

--- a/src/components/LandingPage/HomeList.scss
+++ b/src/components/LandingPage/HomeList.scss
@@ -45,7 +45,7 @@ html {
   position: absolute;
   top: 0;
   width: 4%;
-  height: 280px;
+  height: 260px;
   z-index: 40;
   background: $netflixBlack;
   opacity: 0.5;
